--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   width: 600px;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   text-align: center;
+  box-shadow: 0px 0px 5px;
 }
 
 .input-section {
