--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@ button {
     color: #4a90e2;
 }
 
+#filter-btn:hover {
+  background-color: black;
+}
+
 button:hover {
   background-color: #6e6e8f;
 }
